--- a/mm/sass/blocks/header.scss
+++ b/mm/sass/blocks/header.scss
@@ -1,4 +1,5 @@
 .header {
+  padding: 15px 0;
   // border-bottom: 2px solid #525252;
 }
 
@@ -15,7 +16,7 @@
   }
   
   .header--temp {
-    height: 100px;
+    // height: 100px;
     padding-bottom: 30px;
   }
 }
