--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -254,6 +254,9 @@ body {
     font-size: 20px;
     font-family: 'SF UI Display Regular', sans-serif; }
 
+.header {
+  padding: 15px 0; }
+
 .header--temp {
   border-bottom: 1px solid #525252;
   background: rgba(37, 37, 37, 0.7); }
@@ -262,7 +265,6 @@ body {
   .header {
     padding-top: 30px; }
   .header--temp {
-    height: 100px;
     padding-bottom: 30px; } }
 
 .main-nav {
@@ -274,8 +276,7 @@ body {
   justify-content: space-between;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center;
-  height: 90px; }
+  align-items: center; }
 
 @media screen and (max-width: 768px) {
   .main-nav {
@@ -290,7 +291,12 @@ body {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    margin-top: 25px; }
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-bottom: 10px; }
     .main-nav__user a {
       margin-bottom: 10px; } }
 
@@ -394,7 +400,17 @@ body {
       padding-right: 0;
       padding-left: 25px; }
     .button--submit {
-      padding: 5px 30px; } }
+      padding: 5px 30px; }
+    .button--slider {
+      display: block;
+      width: 300px !important;
+      padding: 15px 0 !important; }
+    .button--tv {
+      display: block;
+      width: 256px !important;
+      margin: 0;
+      padding: 15px 0 15px 40px !important;
+      font-size: 15px; } }
 
 .sub-nav {
   display: -webkit-box;
@@ -459,6 +475,9 @@ body {
 
 @media screen and (max-width: 768px) {
   .sub-nav {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
     width: 220px; }
     .sub-nav a {
       font-size: 12px; } }
