--- a/mm/sass/blocks/button.scss
+++ b/mm/sass/blocks/button.scss
@@ -139,5 +139,19 @@
     &--submit {
       padding: 5px 30px;
     }
+    
+    &--slider {
+      display: block;
+      width: 300px !important;
+      padding: 15px 0 !important;
+    }
+    
+    &--tv {
+      display: block;
+      width: 256px !important;
+      margin: 0;
+      padding: 15px 0 15px 40px !important;
+      font-size: 15px;
+    }
   }
 }
