--- a/mm/sass/blocks/main-nav.scss
+++ b/mm/sass/blocks/main-nav.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 90px;
+  // height: 90px;
 }
 
 @media screen and ($tablet-widths) {}
@@ -15,7 +15,9 @@
   .main-nav__user {
     display: flex;
     align-items: center;
-    margin-top: 25px;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-bottom: 10px;
     
     a {
       margin-bottom: 10px;
