--- a/investix/sass/blocks/inner.scss
+++ b/investix/sass/blocks/inner.scss
@@ -24,6 +24,26 @@
   font-weight: 300;
 }
 
+.inner__desc {
+  padding: 50px 0;
+  
+  p {
+    font-size: 16px;
+    font-weight: 300;
+  }
+  
+  h2 {
+    margin: 50px 0 0 0;
+    font-size: 30px;
+    font-weight: 600;
+  }
+  
+  h3 {
+    margin: 70px 0 0 0;
+    font-size: 60px;
+  }
+}
+
 @media screen and ($tablet-widths) {
   .inner__name {
     font-size: 50px;
