--- a/investix/templates/terms-and-conditions.html
+++ b/investix/templates/terms-and-conditions.html
@@ -163,6 +163,20 @@
       </div>
     </div>
   </main>
+  <section class="payment">
+    <div class="container">
+      <div class="payment__flex">
+        <div class="payment__box  payment__box--visa"></div>
+        <div class="payment__box  payment__box--mc"></div>
+        <div class="payment__box  payment__box--ae"></div>
+        <div class="payment__box  payment__box--neteller"></div>
+        <div class="payment__box  payment__box--paypal"></div>
+        <div class="payment__box  payment__box--skrill"></div>
+        <div class="payment__box  payment__box--ideal"></div>
+        <div class="payment__box  payment__box--bank"></div>
+      </div>
+    </div>
+  </section>
   <footer class="footer">
     <div class="container">
       <a href="../index.html">
@@ -181,28 +195,28 @@
         </ul> -->
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a href="account-programs/basic.html">Basic Program</a></li>
-          <li><a href="account-programs/advanced.html">Advanced Program</a></li>
-          <li><a href="account-programs/expert.html">Expert Program</a></li>
-          <li><a href="account-programs/pro.html">Pro Program</a></li>
-          <li><a href="account-programs/ultimate.html">Ultimate Program</a></li>
-          <li><a href="account-programs/crypto-master.html">Crypto Master</a></li>
+          <li><a href="../account-programs/basic.html">Basic Program</a></li>
+          <li><a href="../account-programs/advanced.html">Advanced Program</a></li>
+          <li><a href="../account-programs/expert.html">Expert Program</a></li>
+          <li><a href="../account-programs/pro.html">Pro Program</a></li>
+          <li><a href="../account-programs/ultimate.html">Ultimate Program</a></li>
+          <li><a href="../account-programs/crypto-master.html">Crypto Master</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
-          <!-- <li><a href="#">About Us</a></li>
-          <li><a href="#">About Meir Barak</a></li>
-          <li><a href="#">Meet Out Team</a></li>
-          <li><a href="#">Partners</a></li>
-          <li><a href="#">Refer A Friend</a></li> -->
-          <li><a href="contact-us.html">Contact Us</a></li>
+          <li><a class="footer__active">Terms and Conditions</a></li>
+          <li><a href="privacy-policy.html">Privacy Policy</a></li>
+          <li><a href="../contact-us.html">Contact Us</a></li>
+        </ul>
+        <ul class="footer__list">
+          <li><b>Trading Chat Room</b></li>
+          <li><a href="#">Live Trading Chat Room</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Contact information</b></li>
           <!-- <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li> -->
           <li><a class="footer__email" href="mailto:info@investix.com">info@investix.com</a></li>
           <li><a class="footer__home" href="https://www.investix.com">www.investix.com</a></li>
-          <!-- <li><a class="footer__chat" href="#">Live Trading Chat Room</a></li> -->
         </ul>
       </div>
     </div>
@@ -215,14 +229,7 @@
       <div class="container">
         <div class="footer__inner">
           <p class="footer__copy">© 2018 All rights reserved</p>
-          <ul class="footer__rules">
-            <li><a class="footer__active">Terms of Use</a></li>
-            <li>|</li>
-            <li><a href="privacy-policy.html">Privacy Policy</a></li>
-            <li class="footer__up">
-              <button type="button"></button>
-            </li>
-          </ul>
+          <button class="footer__up" type="button"></button>
         </div>
       </div>
     </div>
