--- a/investix/sass/blocks/footer.scss
+++ b/investix/sass/blocks/footer.scss
@@ -126,23 +126,17 @@
 }
 
 .footer__up {
-  position: absolute;
-  top: -10px;
-  right: -100px;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  border: none;
+  background: url('../img/footer-up.svg') no-repeat center;
+  transition: 0.2s;
+  cursor: pointer;
+  outline: none;
   
-  button {
-    width: 40px;
-    height: 40px;
-    padding: 0;
-    border: none;
-    background: url('../img/footer-up.svg') no-repeat center;
-    transition: 0.2s;
-    cursor: pointer;
-    outline: none;
-    
-    &:hover {
-      transform: scale(1.1);
-    }
+  &:hover {
+    transform: scale(1.1);
   }
 }
 
@@ -183,9 +177,7 @@
   }
   
   .footer__copy {
-    order: 2;
-    margin: 30px 0 0 0;
-    padding: 0 0 70px 0;
+    margin: 30px 0;
   }
   
   .footer__rules {
@@ -193,19 +185,17 @@
   }
   
   .footer__up {
-    top: 90px;
-    right: 50%;
+    position: relative;
     animation: up 1s infinite alternate;
-    transform: translateX(50%);
   }
   
   @keyframes up {
     0% {
-      top: 100px;
+      top: -10px;
     }
     
     100% {
-      top: 80px;
+      top: 5px;
     }
   }
 }
