--- a/investix/sass/style.scss
+++ b/investix/sass/style.scss
@@ -11,6 +11,7 @@
 @import 'blocks/services';
 @import 'blocks/live';
 @import 'blocks/contact';
+@import 'blocks/payment';
 @import 'blocks/footer';
 
 @import 'blocks/account';
