--- a/investix/sass/style.scss
+++ b/investix/sass/style.scss
@@ -17,3 +17,5 @@
 @import 'blocks/account';
 @import 'blocks/account-programs';
 @import 'blocks/inner';
+@import 'blocks/edge';
+@import 'blocks/scope';
