--- a/investix/css/style.css
+++ b/investix/css/style.css
@@ -1776,8 +1776,58 @@ body {
 
 .scope__box {
   width: 200px;
-  padding: 80px 0 0 0;
+  margin: 80px 0 0 0;
   color: #fff;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 600;
   text-align: center; }
+  .scope__box b {
+    display: block;
+    width: 70px;
+    height: 70px;
+    margin: auto;
+    color: #0060ff;
+    font-size: 60px;
+    font-weight: 700;
+    border-radius: 50%;
+    background: #fff; }
+
+.scope__box--right {
+  position: relative; }
+  .scope__box--right::after {
+    content: '';
+    position: absolute;
+    top: 35px;
+    left: 130px;
+    width: 200px;
+    height: 1px;
+    border-top: 1px solid #fff; }
+  .scope__box--right::before {
+    content: '';
+    position: absolute;
+    top: 28px;
+    left: 330px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background: #fff; }
+
+.scope__box--left {
+  position: relative; }
+  .scope__box--left::after {
+    content: '';
+    position: absolute;
+    top: 35px;
+    right: 130px;
+    width: 200px;
+    height: 1px;
+    border-top: 1px solid #fff; }
+  .scope__box--left::before {
+    content: '';
+    position: absolute;
+    top: 28px;
+    right: 330px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background: #fff; }
