--- a/investix/css/style.css
+++ b/investix/css/style.css
@@ -1717,7 +1717,22 @@ body {
       font-size: 25px; }
   .inner__text {
     margin: 16px 0;
-    font-size: 16px; } }
+    font-size: 16px; }
+  .inner__flex {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .inner__mockup {
+    width: 300px;
+    height: 230px; }
+  .inner__column {
+    width: auto; }
+  .inner__button {
+    margin: 40px auto 0; } }
 
 .edge {
   padding: 100px 0; }
@@ -1748,6 +1763,24 @@ body {
 
 .edge__button {
   margin: 50px auto 0; }
+
+@media screen and (max-width: 768px) {
+  .edge {
+    padding: 50px 0; }
+  .edge__flex {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .edge__box {
+    margin: 0 0 50px 0; }
+    .edge__box:last-child {
+      margin: 0; }
+  .edge__button {
+    width: 270px; } }
 
 .scope {
   height: 770px;
@@ -1831,3 +1864,237 @@ body {
     height: 15px;
     border-radius: 50%;
     background: #fff; }
+
+@media screen and (max-width: 1200px) {
+  .scope {
+    height: auto;
+    padding: 70px 0; }
+  .scope__img {
+    height: auto;
+    background: none; }
+  .scope__flex {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+  .scope__box {
+    margin: 0 10px; }
+  .scope__box--right::after, .scope__box--right::before,
+  .scope__box--left::after,
+  .scope__box--left::before {
+    display: none; } }
+
+@media screen and (max-width: 768px) {
+  .scope {
+    padding: 50px 0;
+    background: linear-gradient(66deg, #0060ff 0%, #4ed2de 100%) no-repeat; }
+    .scope h2 {
+      font-size: 30px; }
+  .scope__flex {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+    .scope__flex--second {
+      margin: 0; }
+      .scope__flex--second .scope__box:last-child {
+        margin: 0; }
+  .scope__box {
+    margin: 0 0 50px 0; } }
+
+.plan {
+  padding: 0 0 100px 0; }
+
+.plan__name {
+  margin: 0 0 60px 0;
+  font-size: 60px;
+  font-weight: 600;
+  text-align: center; }
+
+.plan__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+.plan__item {
+  width: 370px;
+  text-align: center;
+  border-radius: 4px;
+  background: -webkit-gradient(linear, left bottom, left top, from(#4dcfdf), to(#ff6d33));
+  background: linear-gradient(0deg, #4dcfdf 0%, #ff6d33 100%); }
+  .plan__item b {
+    display: block;
+    padding: 40px 0;
+    color: #fff;
+    font-size: 60px;
+    font-weight: 700; }
+    .plan__item b span {
+      font-size: 30px;
+      font-weight: 600; }
+
+.plan__info {
+  width: 290px;
+  padding: 40px 30px;
+  border-radius: 4px;
+  background: linear-gradient(-77deg, #f2f2f2 0%, #e0f7f9 52%, #cefbff 100%);
+  -webkit-box-shadow: 5px 0px 5px 0px rgba(18, 24, 61, 0.1);
+  box-shadow: 5px 0px 5px 0px rgba(18, 24, 61, 0.1);
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .plan__info b {
+    padding: 0;
+    color: #000;
+    font-size: 30px; }
+  .plan__info p {
+    margin: 40px 0 20px 0;
+    font-weight: normal; }
+  .plan__info ul {
+    margin: 0 0 30px 0;
+    padding: 0;
+    list-style: none; }
+    .plan__info ul hr {
+      width: 70px;
+      height: 1px;
+      border: none;
+      background: #40bee3; }
+  .plan__info:hover {
+    width: 310px; }
+
+.plan__button {
+  margin: auto; }
+
+@media screen and (max-width: 1200px) {
+  .plan {
+    padding: 100px 0; }
+  .plan__list {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .plan__item {
+    margin: 0 0 50px 0; }
+    .plan__item:last-child {
+      margin: 0; } }
+
+@media screen and (max-width: 768px) {
+  .plan {
+    padding: 50px 0; }
+  .plan__name {
+    font-size: 30px; }
+  .plan__item {
+    width: 300px; }
+  .plan__info {
+    width: 210px; }
+    .plan__info:hover {
+      width: 240px; } }
+
+.comment {
+  padding: 60px 0;
+  background: #f4f6fa; }
+
+.comment__name {
+  margin: 0;
+  font-size: 30px;
+  font-weight: normal; }
+  .comment__name span {
+    font-weight: 600; }
+
+.comment__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: 60px 0;
+  padding: 0;
+  list-style: none; }
+
+.comment__item {
+  width: 290px;
+  padding: 30px 40px;
+  border-radius: 4px;
+  background: #fff; }
+  .comment__item b {
+    font-size: 24px;
+    font-weight: 600; }
+  .comment__item p {
+    margin: 30px 0 50px 0;
+    font-weight: normal; }
+
+.comment__author {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.comment__img {
+  width: 50px;
+  height: 50px;
+  background: #ccc url("../img/comment-1.jpg") no-repeat center; }
+
+.comment__info {
+  width: 200px; }
+  .comment__info ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    margin: 5px 0 0 0;
+    padding: 0;
+    list-style: none; }
+    .comment__info ul li {
+      width: 20px;
+      height: 20px;
+      background: url("../img/comment-star.svg"); }
+
+.comment__button {
+  margin: auto; }
+
+@media screen and (max-width: 1200px) {
+  .comment__list {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .comment__item {
+    margin: 0 0 50px 0; }
+    .comment__item:last-child {
+      margin: 0; } }
+
+@media screen and (max-width: 768px) {
+  .comment {
+    padding: 50px 0; }
+  .comment__name {
+    text-align: center; }
+  .comment__item {
+    width: 240px;
+    padding: 30px; }
+  .comment__info {
+    width: 150px; }
+  .comment__button {
+    width: 270px; } }
