--- a/investix/templates/privacy-policy.html
+++ b/investix/templates/privacy-policy.html
@@ -151,7 +151,7 @@
         </ul>
         <ul class="footer__list">
           <li><b>Trading Chat Room</b></li>
-          <li><a href="#">Live Trading Chat Room</a></li>
+          <li><a href="../trading-room.html">Live Trading Chat Room</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Contact information</b></li>
